Fri Apr  4 14:24:36 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorRemoteLink.cpp:
	  Some minor cleanup.

Thu Apr  3 06:22:21 UTC 2008  Ossama Othman  <othman_o@ociweb.com>

        * dds/InfoRepo/DCPS_Utils.cpp (compatibleQOS):

          Prevent PARTITION matching result from overriding previously
          established QoS incompatibilities.  Thanks to Mike for the
          patch.

Wed Apr  2 20:26:58 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.cpp:
        * dds/InfoRepo/Federator.idl:
        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl.inl:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorRemoteLink.cpp:
          Disable intialization of the federation mechanisms if not
          federation Id value is supplied.

        * dds/InfoRepo/DCPS_Utils.cpp:
          Changed the sense of compatibility for PARTITION QoS policy
          matching.

Wed Apr  2 15:25:42 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.mpc:

          Corrected problems with SunCC and Visual C++.

Wed Apr  2 14:49:02 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.cpp:
        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl.inl:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorRemoteLink.cpp:
          Changed to require the ORB to be explicitly passed in during
          configuration.  This removes the use of a more modern
          mechanism for accessing the ORB from the servant.

Tue Apr  1 23:06:41 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/InfoRepo/Federator.idl:
        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorManager_T_Impl.cpp: