@@ -524,17 +524,17 @@ namespace OpenDDS
     }
 
     void
-    Service_Participant::set_repo_ior( const ACE_TCHAR* ior, const RepoKey repo)
+    Service_Participant::set_repo_ior( const ACE_TCHAR* ior, const RepoKey key)
     {
       if( DCPS_debug_level > 0) {
         ACE_DEBUG((LM_DEBUG,
           ACE_TEXT("(%P|%t) Repo[ %d] == %s\n"),
-          repo, ior
+          key, ior
         ));
       }
 
       got_info = true;
-      RepoMap::const_iterator location = this->repoMap_.find( repo);
+      RepoMap::const_iterator location = this->repoMap_.find( key);
       if( location != this->repoMap_.end()) {
         // Repository is already loaded.  Remove the repository only if
         // it is bound to no domains.
@@ -548,7 +548,7 @@ namespace OpenDDS
               ACE_TEXT( "Service_Participant::set_repo_ior, ")
               ACE_TEXT( "attempt to set new repository for key %d ")
               ACE_TEXT( "while previous repository still bound. \n"),
-              repo
+              key
             ));
             return; // throw;
           }
@@ -562,24 +562,30 @@ namespace OpenDDS
         ACE_ERROR ((LM_ERROR,
                     ACE_TEXT ("(%P|%t) ERROR: ")
                     ACE_TEXT ("Service_Participant::set_repo_ior, ")
-                    ACE_TEXT ("nil DCPSInfo (%s) for key %d. \n"), ior, repo));
+                    ACE_TEXT ("nil DCPSInfo (%s) for key %d. \n"), ior, key));
         return; // throw;
 
       } else {
-        this->repoMap_[ repo] = DCPSInfo::_narrow( obj.in());
-        if( CORBA::is_nil( this->repoMap_[ repo].in())) {
+        this->repoMap_[ key] = DCPSInfo::_narrow( obj.in());
+        if( CORBA::is_nil( this->repoMap_[ key].in())) {
           ACE_ERROR ((LM_ERROR,
                       ACE_TEXT ("(%P|%t) ERROR: ")
                       ACE_TEXT ("Service_Participant::set_repo_ior, ")
                       ACE_TEXT ("unable to narrow DCPSInfo (%s) for key %d. \n"),
-                      ior, repo));
+                      ior, key));
           return; // throw;
         }
       }
 
       // Create and install the Built In Topic transport for this
       // repository.
-      if (this->bit_enabled_) this->init_bit_transport_impl( repo);
+      if (this->bit_enabled_) this->init_bit_transport_impl( key);
+    }
+
+    void
+    Service_Participant::set_repo( DCPSInfo_ptr repo, const RepoKey key)
+    {
+      this->repoMap_[ key] = repo;
     }
 
     void
